# OpenVideoGen

./: .gitignore  README.md  dataset_info.txt  pyproject.toml
modules/: model.py
scripts/: datagen.py  inference.py  preprocess.py  recon.py  train.py
