[project]
name = "OpenVideoGen"
version = "0.1.0"
description = "A project for water drop animation generation."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "torch",
    "opencv-python",
    "einops",
    "anyio==4.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modules"]